# build/swagger.json
@@ -1609,6 +1609,32 @@
 				]
 			}
 		},
+		"/api/reservation/cancel": {
+			"delete": {
+				"operationId": "CancelReservation",
+				"responses": {
+					"200": {
+						"description": "Ok",
+						"content": {
+							"application/json": {
+								"schema": {}
+							}
+						}
+					}
+				},
+				"security": [],
+				"parameters": [
+					{
+						"in": "query",
+						"name": "reservationId",
+						"required": true,
+						"schema": {
+							"type": "string"
+						}
+					}
+				]
+			}
+		},
 		"/api/membership/get": {
 			"post": {
 				"operationId": "GetMembership",
